# library_web_app

./: .gitignore  db.sqlite3  main_app.py  pyproject.toml
api/: __init__.py
api/v1/: cruds.py  dependencies.py
api/v1/authors/: cruds.py  depends.py  schemas.py  views.py
api/v1/books/: cruds.py  depends.py  schemas.py  views.py
api/v1/borrows/: cruds.py  depends.py  schemas.py  views.py
core/: __init__.py  config.py
core/db_models/: Author.py  Book.py  Borrow.py  connections.py
migrations/: env.py
migrations/versions/: 2024_12_10_1903-766b881d79b7_.py  2024_12_13_1533-878270489838_.py  2024_12_13_1932-32bb1d422856_.py  2024_12_14_1249-ce28ee99db04_.py  c7d1983dd074_create_tables_authors_books_borrows.py
